# sokoban

./: .dockerignore  .env  .env.example  .gitignore  .gitpod.yml  Cargo.toml  Dockerfile  README.md  Rocket.toml  TODO.txt  anytime.sql  boostrap.sh  current_users.json  docker-compose.yml  init.sql  package-lock.json  package.json  psql-update.sh  punches.csv  punches.txt  remove-from-git.sh  schema.sql  send_req.sh  users.csv
db_files/: get_punches_list.sql  init.sql  mock_users_dept.json  mock_users_no_dept.json  punches_with_tz.sql  starting_data.sql  two_users.json
prisma/: schema.prisma
prisma_scripts/: exportToCsv.js  updateUserId.js  upsertFromCsv.js  user_id_update.csv.example
scripts/: db_opts.sh  send_req.sh  summarize_git.sh
serve/css/: global.css  style.css
src/: func.rs  main.rs
static/css/: style.css
static/html/: spinner.html.tera
static/js/: fingerprint.js  helpers.js  service-worker.js
templates/: admin.html.tera  checklist.html.tera  error.html.tera  home.html.tera  login.html.tera  loginform.html.tera  register.html.tera  status_in.html.tera  status_list.html.tera  table.html.tera  user_statuses.html.tera  userlist.html.tera
