[package]
name = "sokoban"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
# missing a lib target
cargo-watch = "8.5.2"
chrono = { version = "0.4.35", features = ["serde"] }
chrono-tz = "0.8.6"
cookie = "0.18.1"
dotenv = "0.15.0"
rocket = { version = "0.5.0", features = ["json", "secrets"] }
rocket_cors = "0.6.0"
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
serde = "1.0.148"
serde_json = "1.0.114"
sha2 = "0.10.8"
tokio = "1.26.0"
uuid = { version = "1.8.0", features = ["v4"] }
watch = "0.2.3"

[dependencies.sqlx]
version = "0.7.1"
features = ["runtime-tokio-native-tls", "macros", "postgres", "chrono"]
